--- a/webapp/public/javascripts/angular/advanced.html
+++ b/webapp/public/javascripts/angular/advanced.html
@@ -185,6 +185,8 @@
 </div>
 
 <div class="box-footer">
+  <button class="btn btn-primary" ng-bind="i18n.__('Validate')" data-ng-click="$ctrl.onValidateView()"></button>
+
   <div class="btn-group pull-right" style="margin-left: 10px;" ng-show="isDynamic && storager.format">
     <button type="button" class="btn btn-primary" ng-bind="i18n.__('Save and Run')" data-ng-click="save(true);"></button>
     <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
