--- a/helper/Plataforma de Monitoramento Ambiental TerraMAý.html
+++ b/helper/Plataforma de Monitoramento Ambiental TerraMAý.html
@@ -193,7 +193,7 @@
 <p class="rvps4"><span class="rvts12">A TerraMA² é um software livre, podendo ser redistribuída e/ou modificada sob os termos da GNU Lesser General Public Licence versão 4 como publicado pela Free Software Foundation.</span></p>
 <p class="rvps4"><span class="rvts12">Comentários, sugestões ou relato de problemas podem ser enviados para a equipe da TerraMA² (terrama2@dpi.inpe.br) da Divisão de Processamento de Imagens (DPI) do Instituto Nacional de Pesquisas Espaciais (INPE).</span></p>
 <p class="rvps4"><span class="rvts12"><br/></span></p>
-<p class="rvps7"><span class="rvts11">Versão da TerraMA²: 4.0.10</span><br/><span class="rvts11">Versão da TerraLib: 5.3.3</span><br/><span class="rvts11">Data da versão: 18/Jan/2019</span></p>
+<p class="rvps7"><span class="rvts11">Versão da TerraMA²: 4.0.10</span><br/><span class="rvts11">Versão da TerraLib: 5.3.3</span><br/><span class="rvts11">Data da versão: 05/Abr/2019</span></p>
 <hr style="height: 2px;">
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
