--- a/webapp/public/javascripts/angular/advanced.html
+++ b/webapp/public/javascripts/angular/advanced.html
@@ -184,7 +184,7 @@
   </div>
 </div>
 
-<!-- <div class="col-md-12" ng-show="form.length > 0">
+<div class="col-md-12" ng-show="form.length > 0">
   <div class="box box-default box-solid">
     <div class="box-header with-border">
       <h3 class="box-title">{{ i18n.__('Attributes') }}</h3>
@@ -196,7 +196,7 @@
       <attributes model="ctrl.analysis.metadata" metadata="ctrl.metadata" provider="dataSeries.data_provider_id" table-name="model.table_name" ng-if="model.table_name!==undefined && dataSeries.data_provider_id!==undefined"></attributes>
     </div>
   </div>
-</div> -->
+</div>
 
 <div class="box-footer">
   <button class="btn btn-primary" ng-bind="i18n.__('Validate')" data-ng-click="$ctrl.onValidateView()"></button>
