Changed the layout to fit better on mobiles devices

--- a/webapp/public/javascripts/angular/countries/countries-tpl.html
+++ b/webapp/public/javascripts/angular/countries/countries-tpl.html
@@ -4,12 +4,14 @@
   }
 
   .countries-i18n .intl-tel-input {
-    margin-right: 60px !important;
-    padding: 5px !important;
+    display: block;
+    padding: 15px;
+    width: 100%;
+    height: 100%;
   }
 
-  .countries-i18n .intl-tel-input .flag-container {
-    margin-top: 17px;
+  .countries-i18n{
+    padding: 15px;
   }
 
   .countries-i18n #i18n-input-flags {
