--- a/webapp/public/javascripts/angular/wizard.html
+++ b/webapp/public/javascripts/angular/wizard.html
@@ -61,7 +61,7 @@
       </div>
 
       <div class="col-md-4">
-        <terrama2-map id="previewMap"></terrama2-map>
+        <terrama2-map id="previewMap" hide></terrama2-map>
       </div>
 
       <div class="col-md-12" ng-if="!isDynamic && (semanticsCode === 'STATIC_DATA-postgis' || (semanticsCode === 'STATIC_DATA-ogr' && isDataProviderFolder()))">
