--- a/webapp/public/javascripts/angular/wizard.html
+++ b/webapp/public/javascripts/angular/wizard.html
@@ -43,7 +43,7 @@
     </wz-step>
 
     <wz-step wz-title="{{ i18n.__('Parameters') }}" canexit="isSecondStepValid" wz-data="wizard.parameters">
-      <div ng-class="{ 'col-md-12' : !$ctrl.isFilteredTable(), 'col-md-8': $ctrl.isFilteredTable }">
+      <div ng-class="{ 'col-md-12' : !$ctrl.isFilteredTable(), 'col-md-8': $ctrl.isFilteredTable() }">
 
         <!-- schema form -->
         <form name="forms.parametersForm" sf-schema="schema" sf-form="form" sf-model="model" sf-options="options"></form>
@@ -60,7 +60,7 @@
 
       </div>
 
-      <div class="col-md-4">
+      <div class="col-md-4" ng-show="$ctrl.isFilteredTable()">
         <terrama2-map id="previewMap" hide></terrama2-map>
       </div>
 
@@ -81,7 +81,7 @@
         <a href="" class="btn btn-primary pull-left cancel-static" ng-show="!isDynamic">{{ i18n.__('Cancel') }}</a>
 
         <div class="pull-right">
-          <button class="btn btn-primary" ng-bind="i18n.__('Validate')" ng-if="ctrl.isFilteredTable() || semanticsCode === 'STATIC_DATA-VIEW-postgis'" data-ng-click="onValidateView()"></button>
+          <button class="btn btn-primary" ng-bind="i18n.__('Validate')" ng-if="$ctrl.isFilteredTable() || semanticsCode === 'STATIC_DATA-VIEW-postgis'" data-ng-click="onValidateView()"></button>
 
           <button class="btn btn-primary" type="submit" wz-previous>{{ i18n.__('Previous') }}</button>
           <button class="btn btn-primary" type="submit" ng-show="isDynamic && (!wizard.store.disabled || !wizard.filter.disabled || !wizard.intersection.disabled || !wizard.csvFormatForm.disabled || !wizard.parameters)" ng-click="goToValidNextStep('parametersForm');" wz-next>{{ i18n.__('Next') }}</button>
