Adding WFS Semantics.

--- a/webapp/public/javascripts/angular/wizard.html
+++ b/webapp/public/javascripts/angular/wizard.html
@@ -177,7 +177,68 @@
 
     <wz-step wz-title="{{ i18n.__('Filters') }}" canexit="validateSteps" wz-disabled="{{ !isDynamic }}" wz-data="wizard.filter" canenter="!wizard.filter.disabled">
       <div class="col-md-12">
-        <div id="includeFilter" ng-include=""></div>
+        <div class="row">
+          <div class="col-md-12" style="padding-top: 20px">
+            <terrama2-box title="i18n.__('Date (local time)')" css="cssBoxSolid">
+              <terrama2-filter-datetime-picker before-datetime="filter.date.beforeDate" after-datetime="filter.date.afterDate"></terrama2-filter-datetime-picker>
+            </terrama2-box>
+
+            <terrama2-box title="i18n.__('Area')" css="cssBoxSolid">
+              <div class="col-md-8 terrama2-nopadding-box">
+                <p></p>
+                <div class='col-md-12'>
+                  <div class="form-group">
+                    <label>{{ i18n.__('Select the filter area type') }}:</label>
+                    <select class="form-control"
+                            id="filterAreaCombobox"
+                            name="filterAreaType"
+                            ng-model="filter.filterArea"
+                            ng-change="onFilterRegion();"
+                            ng-options="v.value as v.name for (k, v) in filterTypes">
+                    </select>
+                  </div>
+                </div>
+
+                <div class="col-md-12 terrama2-nopadding-box" ng-if="filter.filterArea == filterTypes.AREA.value">
+                  <terrama2-bounded-box ng-model="filter.area" is-required="filter.filterArea == filterTypes.AREA.value">
+                  </terrama2-bounded-box>
+                </div>
+
+                <div class="col-md-12" ng-if="filter.filterArea == filterTypes.STATIC_DATA.value">
+                  <form name="staticDataSeriesForm">
+                    <div class="terrama2-nopadding-box col-md-6 form-group" terrama2-show-errors>
+                      <label>{{ i18n.__('Data Series') }}:</label>
+                      <select class="form-control"
+                              id="filterStaticDataSeries"
+                              name="dataSeriesId"
+                              ng-model="filter.data_series_id"
+                              ng-required="filter.filterArea == filterTypes.STATIC_DATA.value"
+                              ng-options="v.id as v.name for (k, v) in staticDataSeriesList">
+                      </select>
+                      <span class='help-block' ng-show='staticDataSeriesForm.dataSeriesId.$dirty && staticDataSeriesForm.dataSeriesId.$error.required'>
+                        {{ i18n.__('Data series is required') }}
+                      </span>
+                    </div>
+                    <div class="col-md-6" ng-if="dataSeries.semantics.data_series_type_name =='GRID' ">
+                      <div class="form-group">
+                        <div class="checkbox" style="margin-left: 20px; margin-top:30px;">
+                          <span style="font-weight: 700;">
+                            <input type="checkbox" id="crop-raster" name="crop_raster" ng-model="filter.area.crop_raster"> {{ i18n.__('Crop raster') }}
+                          </span>
+                        </div>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <terrama2-map id="previewMap"></terrama2-map>
+              </div>
+            </terrama2-box>
+          </div> <!-- ./col-md-12 -->
+        </div>
+        <!-- ./row -->
+
       </div>
       <div class="col-md-12" style="margin-top: 30px; padding-left: 25px; padding-right: 25px;">
         <hr />
@@ -243,7 +304,7 @@
     $("#wizard").attr("template", templatePath);
     $("#includeDcpTable").attr("ng-include", includeDcpTable);
     $("#includeIntersection").attr("ng-include", includeIntersection);
-    $("#includeFilter").attr("ng-include", includeFilter);
+    // $("#includeFilter").attr("ng-include", includeFilter);
     $("#includeGeneralData").attr("ng-include", includeGeneralData);
 
     $(".cancel-dynamic").attr("href", cancelDynamic);
