--- a/webapp/public/javascripts/angular/wizard.html
+++ b/webapp/public/javascripts/angular/wizard.html
@@ -101,7 +101,7 @@
       </div>
     </wz-step>
 
-    <wz-step wz-title="{{ i18n.__('Attributes') }}" canexit="isSecondStepValid" wz-data="wizard.attributes" wz-disabled="{{isDynamic}}" canenter="!wizard.attributes.disabled">
+    <wz-step wz-title="{{ i18n.__('Attributes') }}" canexit="isSecondStepValid" wz-data="wizard.attributes" wz-disabled="{{isDynamic || model.table_name==undefined}}" canenter="!wizard.attributes.disabled">
         <form name="forms.attributesForm"></form>
           <attributes model="model.attributes" dataserie="dataSeries" provider="dataSeries.data_provider_id" table-name="model.table_name" ng-if="model.table_name!==undefined && dataSeries.data_provider_id!==undefined"></attributes>
           <div class="col-md-12">
