--- a/webapp/public/javascripts/angular/wizard.html
+++ b/webapp/public/javascripts/angular/wizard.html
@@ -45,8 +45,19 @@
     <wz-step wz-title="{{ i18n.__('Parameters') }}" canexit="isSecondStepValid" wz-data="wizard.parameters">
       <div ng-class="{ 'col-md-12' : !$ctrl.isFilteredTable(), 'col-md-8': $ctrl.isFilteredTable() }">
 
-        <!-- schema form -->
-        <form name="forms.parametersForm" sf-schema="schema" sf-form="form" sf-model="model" sf-options="options"></form>
+        <!-- schema form5 -->
+        <form name="forms.parametersForm" sf-schema="schema" ng-show="!isDynamic" sf-form="form" sf-model="model" sf-options="options">
+          <div class="form-check" style="margin-left:20px">
+            <input type="radio" ng-click="showButtonShape()" name="showBtn" class="form-check-input" id="choiceDatabase" value="option1" checked>
+            <label class="form-check-label" for="choiceDatabase">Escolher tabela no banco</label>
+          </div>
+          <div class="form-check" style="margin-left:20px">
+            <input type="radio" ng-click="showButtonShape()" name="showBtn" class="form-check-input" id="choiceShapefile" value="option2">
+            <label class="form-check-label" for="choiceShapefile">Transferência de arquivo para criar tabela</label>
+          </div>
+        </form>
+
+        <form name="forms.parametersForm" ng-show="isDynamic" sf-schema="schema" sf-form="form" sf-model="model" sf-options="options"></form>
 
         <div ng-if="isDCP()">
           <div class="col-md-3 terrama2-top-field">
