Fixed info tool not showing error

--- a/webapp/public/javascripts/angular/advanced.html
+++ b/webapp/public/javascripts/angular/advanced.html
@@ -184,7 +184,7 @@
   </div>
 </div>
 
-<div class="col-md-12" ng-show="form.length > 0">
+<div class="col-md-12" ng-show="!isDynamic && form.length > 0">
   <div class="box box-default box-solid">
     <div class="box-header with-border">
       <h3 class="box-title">{{ i18n.__('Attributes') }}</h3>
